[gd_scene load_steps=2 format=3 uid="uid://c1sm3pwjx0qxh"]

[ext_resource type="Script" path="res://scripts/perks_selection.gd" id="1_3mibi"]

[node name="Perks Selection" type="CanvasLayer"]
script = ExtResource("1_3mibi")

[node name="Shop Button" type="Button" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -47.0
offset_bottom = 31.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 25
text = "Shop"

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -322.0
grow_horizontal = 0
grow_vertical = 2
color = Color(0, 0, 0, 0.356863)

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -131.0
offset_right = 131.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40

[node name="Label" type="Label" parent="ColorRect/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 50
text = "Shop"

[node name="Heal Button" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
text = "Heal to full | 20 coins"

[node name="Speed Button" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
text = "Speed Increase (30s) | 20 coins"

[node name="Damage Button" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
text = "Damage Increase (30s) | 20 coins"

[node name="Resistance Button" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
text = "Resistance (15s) | 35 coins"

[node name="Rage Button" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
text = "Rage (15s) | 50 coins"

[node name="Return Button" type="Button" parent="ColorRect/VBoxContainer"]
layout_mode = 2
text = "Return to the game"

[connection signal="pressed" from="Shop Button" to="." method="_on_shop_button_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/Heal Button" to="." method="_on_heal_button_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/Speed Button" to="." method="_on_speed_button_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/Damage Button" to="." method="_on_damage_button_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/Resistance Button" to="." method="_on_resistance_button_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/Rage Button" to="." method="_on_rage_button_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/Return Button" to="." method="_on_return_button_pressed"]
